# tradecopilot

./: .gitignore  Caddyfile  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  main.py  scheduler.py
backend/app/agent_orchestrator/: __init__.py  models.py  orchestrator.py
backend/app/agents/: __init__.py  analyst.py  coach_agent.py  execution_agent.py  features.py  models.py  orchestrator.py  risk_agent.py  strategy.py
backend/app/ai/: coach.py  prompts.py
backend/app/ai_coach/: __init__.py
backend/app/api/: routes_admin.py  routes_agents.py  routes_ai.py  routes_audit.py  routes_auth.py  routes_backtest.py  routes_brokers.py  routes_health.py  routes_journal.py  routes_partner.py  routes_predict.py  routes_trading.py  routes_users.py
backend/app/audit/: models.py  service.py
backend/app/auth/: dependencies.py  models.py  service.py
backend/app/backtest_simulation/: __init__.py
backend/app/billing/: models.py  policy.py  stripe_stub.py
backend/app/brokers/: __init__.py  alpaca_client.py  base.py  models.py  upstox_client.py  zerodha_client.py
backend/app/common/: crypto.py  exceptions.py  logging.py  rate_limit.py
backend/app/data/: __init__.py  alpaca_data.py  global_equity.py  models.py  nse_india.py
backend/app/data_ingestion/: __init__.py
backend/app/journal/: analytics.py  journal_service.py
backend/tests/: conftest.py
deploy/: README.md
(+144 files in other folders)
